Initial Release
- Adjustments for beetRoot 1.0.0 -> nanohttpd-2.3.2-BEETROOT
- Proper NanoHTTPD git-rep integration